zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__move_focus_left_into_stacked_panes.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #3 ──────────────────────────────────── big-antelope ┐┌ Pane #2 ─────────────────────────────────── apt-anteater ┐
01 (C): ┌ Pane #4 ──────────────────────────────────── coy-backpack ┐│                                                          │
02 (C): ┌ Pane #5 ──────────────────────────────────── dry-backyard ┐│                                                          │
03 (C): ┌ Pane #6 ──────────────────────────────────── fab-barnacle ┐│                                                          │
04 (C): ┌ Pane #7 ──────────────────────────────────── fit-birdcage ┐│                                                          │
05 (C): ┌ Pane #8 ──────────────────────────────────── fun-bluebird ┐│                                                          │
06 (C): ┌ Pane #9 ──────────────────────────────────── hip-bullfrog ┐│                                                          │
07 (C): ┌ Pane #10 ─────────────────────────────────── hot-campfire ┐│                                                          │
08 (C): ┌ Pane #11 ─────────────────────────────────── icy-cardinal ┐│                                                          │
09 (C): ┌ Pane #12 ─────────────────────────────────── new-chipmunk ┐└──────────────────────────────────────────────────────────┘
10 (C): ┌ Pane #13 ─────────────────────────────────── odd-crayfish ┐┌ Pane #15 ────────────────────────────────── raw-dinosaur ┐
11 (C): ┌ Pane #14 ─────────────────────────────────── pro-cupboard ┐│                                                          │
12 (C): │                                                           ││                                                          │
13 (C): │                                                           ││                                                          │
14 (C): │                                                           ││                                                          │
15 (C): │                                                           ││                                                          │
16 (C): │                                                           ││                                                          │
17 (C): │                                                           ││                                                          │
18 (C): │                                                           ││                                                          │
19 (C): └───────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
