zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__move_focus_right_into_stacked_panes.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────── able-ant ┐┌ Pane #2 ───────────────────────────────────── active-ant ┐
01 (C): │                                                           │┌ Pane #3 ────────────────────────────────────── alert-ant ┐
02 (C): │                                                           │┌ Pane #4 ────────────────────────────────────── alive-ant ┐
03 (C): │                                                           │┌ Pane #5 ───────────────────────────────────── amused-ant ┐
04 (C): │                                                           │┌ Pane #6 ────────────────────────────────────── ample-ant ┐
05 (C): │                                                           │┌ Pane #7 ─────────────────────────────────── artistic-ant ┐
06 (C): │                                                           │┌ Pane #8 ────────────────────────────────────── awake-ant ┐
07 (C): │                                                           │┌ Pane #9 ────────────────────────────────────── aware-ant ┐
08 (C): │                                                           │┌ Pane #10 ────────────────────────────────────── bold-ant ┐
09 (C): └───────────────────────────────────────────────────────────┘┌ Pane #11 ───────────────────────────────────── brave-ant ┐
10 (C): ┌ Pane #14 ─────────────────────────────────────── calm-ant ┐┌ Pane #12 ──────────────────────────────────── bright-ant ┐
11 (C): │                                                           │┌ Pane #13 ────────────────────────────────────── busy-ant ┐
12 (C): │                                                           ││                                                          │
13 (C): │                                                           ││                                                          │
14 (C): │                                                           ││                                                          │
15 (C): │                                                           ││                                                          │
16 (C): │                                                           ││                                                          │
17 (C): │                                                           ││                                                          │
18 (C): │                                                           ││                                                          │
19 (C): └───────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
